2019-01-15 Daniel Farrow

    * line_classifier/lfs_ews/luminosity_function.py: Increase multiplier
            factor when computing Lmax
    * line_classifier/lfs_ews/equivalent_width.py: Add option to normalize
         dists
    * scripts/add_prob_to_catalogue.py
    * scripts/generate_ew_obs_cube.py: Now account for EWs greater than
           considered range in normalisation
    * scripts/integrate_ew_obs_cube.py: Plot and integrate the EW cubes
    
    Updated tests to use new EW cubes
    * tests/conftest.py
    * tests/data/config/lae_log_ew_obs_0_600_glim25_redo.fits
    * tests/data/config/oii_log_ew_obs_0_600_glim25_redo.fits
    * tests/data/universe.cfg
    * tests/test_classification_prob.py

2018-01-11 Daniel Farrow

   * line_classifier/lfs_ews/luminosity_function.py: Removed unused class
        variables
   * line_classifier/probs/classification_prob.py: NaN probabilities now
         raise a warning instead of an exception in order to be more
	 robust to realistic noisy data. Added logging
   * line_classifier/probs/classification_prob_leung.py: As above
   * tests/test_classification_prob_leung.py: Added an extra test
   * scripts/add_prob_to_catalogue.py: Use observed flux in script

2018-01-08 Daniel Farrow

   * README.md: Listed stuff that doesn't work or isn't implemented
   * line_classifier/probs/classification_prob.py: Integrated with rest of 
                          new version of code. Uses config files now
   * tests/test_classification_prob_leung.py: Tests for the above
   * scripts/add_prob_to_catalogue.py: Script to add probabilities to a
                                       catalogue
   * tests/data/config/*: Added pretabulated matrices of dN/dEW versus
                          redshift
   * tests/data/universe.cfg: Added config parameters for the new-style
                              P(LAE) calculations in add_prob_to_catalogue
   * tests/conftest.py: Added fixture to set up test directory with relevant